--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,6 +16,22 @@
 	--subColor: #48423b;
 	--subColorRgb: 72, 66, 59;
 }
+@media (prefers-color-scheme: dark) {
+	body {
+		--textColor: #fefbf9;
+		--textColorRgb: 254, 251, 249;
+		--bgColor: #3c3732;
+		--bgColorRgb: 24, 22, 20;
+		--keyColor: #37807a;
+		--keyColorRgb: 55, 128, 122;
+		--keyColorDark: #29605c;
+		--keyColorDarkRgb: 41, 96, 92;
+		--subColor: #48423b;
+		--subColorRgb: 72, 66, 59;
+		--linkColor: #fefbf9;
+		--linkColorRgb: 254, 251, 249;
+	}
+}
 
 /* base CSS */
 html {
@@ -56,9 +72,9 @@ p:not(:last-child), blockquote:not(:last-child) {
 }
 
 a {
-  color: var(--subColor);
+  color: var(--linkColor);
 	text-decoration: none;
-	border-bottom: 1px solid rgba($color: var(--subColorRgb), $alpha: 0.5);
+	border-bottom: 1px solid rgba($color: var(--linkColorRgb), $alpha: 0.5);
 	transition: all 0.4s ease;
 	&.link--unstyle {
 		border-bottom: none;
