--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -65,7 +65,14 @@
   <body class="{{ template | default: 'homePage' }}">
     <header class="header">
       <div class="header__inner page-width">
-        <a href="/" class="unstyle"><img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy"></a>
+        {%- if template == blank -%}
+          <h1 class="visually-hidden">呼吸書房</h1>
+        {%- else -%}
+          <p class="visually-hidden">呼吸書房</p>
+        {%- endif -%}
+        <a href="/" class="unstyle">
+          {%- render 'icon-logo', className: "logo__image" -%}
+        </a>
         <button id="mobileGnavBtn" class="mobile__nav-btn" type="button">
           <span class="btn__line"></span>
           <span class="btn__line"></span>
@@ -126,7 +133,9 @@
           </ul>
         </nav>
         <div class="footer__info">
-          <a href="/" class="unstyle"><img src="/assets/img/logo.svg" alt="呼吸書房" loading="lazy" width="150" class="logo__image"></a>
+          <a href="/" class="unstyle">
+            {%- render 'icon-logo', className: "logo__image" -%}
+          </a>
           <small><span class="font-serif">物語と旅人は、同じ国に住んでいる</span><br>Copyright &copy; Minato Kazano All rights researved.</small>
         </div>
       </div>
