--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -324,15 +324,7 @@ blockquote {
 
 // Common
 body {
-	&.homePage {
-		.header {
-			box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
-		}
-	}
 	&:not(.homePage) {
-		.header {
-			//border-bottom: 1px solid rgba($color: var(--keyColorRgb), $alpha: 0.3);
-		}
 		.main {
 			padding-top: 12rem;
 			@media (max-width: $sp-width) {
@@ -346,17 +338,21 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: rgba($color: var(--bgColorRgb), $alpha: 0.75);
 	z-index: 20;
 	width: 100%;
 	height: 6.5rem;
 	@include flex;
 	align-items: center;
-	//border-bottom: 1px solid rgba($color: var(--keyColorRgb), $alpha: 0.3);
 	transition: all 0.4s ease-in-out;
+	.homePage & {
+		box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
+		background-color: rgba($color: var(--bgColorRgb), $alpha: 0.75);
+		@media (max-width: $sp-width) {
+			background-color: rgba($color: var(--bgColorRgb), $alpha: 0.85);
+		}
+	}
 	@media (max-width: $sp-width) {
 		height: 5rem;
-		background-color: rgba($color: var(--bgColorRgb), $alpha: 0.85);
 	}
 	&:hover {
 		background-color: var(--bgColor);
