--- a/_includes/icon-sun.liquid
+++ b/_includes/icon-sun.liquid
@@ -1,11 +1,9 @@
 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 512 512" class="{{ className }}">
 <g>
-	<path class="st0" d="M256,118.125c-76.156,0-137.875,61.719-137.875,137.875S179.844,393.875,256,393.875
-		S393.875,332.156,393.875,256S332.156,118.125,256,118.125z" fill="currentColor"></path>
+	<path class="st0" d="M256,118.125c-76.156,0-137.875,61.719-137.875,137.875S179.844,393.875,256,393.875 S393.875,332.156,393.875,256S332.156,118.125,256,118.125z" fill="currentColor"></path>
 	<rect x="235.906" class="st0" width="40.156" height="77.297" fill="currentColor"></rect>
-	<rect x="235.906" y="434.703" class="st0" width="40.156" height="77.297" fill="currentColor"></rect>
-	
-		<rect x="63.657" y="82.229" transform="matrix(0.7071 0.7071 -0.7071 0.7071 102.3047 -42.376)" class="st0" width="77.296" height="40.15" fill="currentColor"></rect>
+	<rect x="235.906" y="434.703" class="st0" width="40.156" height="77.297" fill="currentColor"></rect>	
+	<rect x="63.657" y="82.229" transform="matrix(0.7071 0.7071 -0.7071 0.7071 102.3047 -42.376)" class="st0" width="77.296" height="40.15" fill="currentColor"></rect>
 	<polygon class="st0" points="368.156,396.547 422.828,451.219 451.219,422.813 396.563,368.156 	" fill="currentColor"></polygon>
 	<rect y="235.906" class="st0" width="77.281" height="40.156" fill="currentColor"></rect>
 	<polygon class="st0" points="434.688,235.922 434.688,276.078 512,276.063 512,235.906 	" fill="currentColor"></polygon>
