--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -38,6 +38,12 @@
 				background-color: rgba(var(--keyColorDarkRgb), 1);
 			}
 		}
+		.header__shift-btn--sun {
+			opacity: 0.3;
+		}
+		.header__shift-btn--moon {
+			opacity: 1;
+		}
 		@media (max-width: $sp-width) {
 			.header__nav .menu-item--parent {
 				color: var(--keyColorDark);
@@ -467,8 +473,42 @@ body {
 		box-shadow: none;
 		padding: 1rem;
 		z-index: 31;
-		.header__shift-btn--sun {
-			opacity: 0.3;
+		&::after {
+			display: block;
+			content: "背景色を変更する";
+			white-space: nowrap;
+			font-size: 1rem;
+			@media (min-width: $pc-width) {
+				position: absolute;
+				bottom: -1em;
+				right: 1rem;
+				opacity: 0;
+				transition: opacity 0.4s ease-in-out;					
+			}
+			@media (max-width: $sp-width) {
+
+			}
+		}
+		&:hover {
+			&::after {
+				opacity: 1;
+			}
+		}
+		@media (max-width: $sp-width) {
+			right: initial;
+			left: 1.8rem;
+			top: 0.8rem;
+			gap: 0.7rem;
+			svg {
+				width: 1.6rem;
+				height: 1.6rem;
+			}
+		}
+		&--sun {
+			opacity: 0.8;
+		}
+		&--moon {
+			opacity: 0.2;
 		}
 	}
 	.mobile__nav-btn {
