ダークモード最適化＆ブログ更新

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,8 @@
 	--keyColorDarkRgb: 41, 96, 92;
 	--subColor: #48423b;
 	--subColorRgb: 72, 66, 59;
+	--linkColor: #48423b;
+	--linkColorRgb: 72, 66, 59;
 }
 
 [data-color-mode="dark"] {
@@ -1741,6 +1743,13 @@ body {
 					top: 0;
 					left: 0;
 				}
+			}
+		}
+		pre {
+			padding: 1em;
+			background-color: rgba($color: var(--keyColorRgb), $alpha: 0.1);
+			code {
+				white-space: pre-wrap;
 			}
 		}
 	}
