--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1706,6 +1706,15 @@ body {
 				background-color: rgba($color: var(--keyColorRgb), $alpha: 0.25);
 			}
 		}
+		h5 {
+			font-size: 1em;
+		}
+		p + h5 {
+			margin-top: 2em;
+		}
+		h5 + p:not(:first-child) {
+			margin-top: 0em;
+		}
 		hr {
 			margin-top: 4em;
 			margin-bottom: 4em;
