書籍情報追加

--- a/_includes/section-books.liquid
+++ b/_includes/section-books.liquid
@@ -1,4 +1,5 @@
-{%- assign novels-info-title = '『本を片手に植物園 vol.1 Tokyo』, 
+{%- assign novels-info-title = '『walking postcard vol.12』, 
+『本を片手に植物園 vol.1 Tokyo』, 
 『walking postcard vol.11』, 
 『十一月の春の庭』, 
 『walking postcard vol.6』, 
@@ -9,9 +10,9 @@
 『竜の花嫁』, 
 『旅人よ立ち止まれ』, 
 『紙飛行機に眠る月』' | split: ', ' -%}
-{%- assign novels-info-handle = 'botanical-vol1, postcard-11, november, postcard-6, dream, tree, eien, aoakane, ryuyome, tabibito, airplane' | split: ', ' -%}
-{%- assign novels-info-size = 'small, big, small, big, small, normal, small, small, small, big, small' | split: ', ' -%}
-{%- assign novels-info-detail = '2025.3.23刊行, 
+{%- assign novels-info-handle = 'postcard-12, botanical-vol1, postcard-11, november, postcard-6, dream, tree, eien, aoakane, ryuyome, tabibito, airplane' | split: ', ' -%}
+{%- assign novels-info-size = 'big, small, big, small, big, small, normal, small, small, small, big, small' | split: ', ' -%}
+{%- assign novels-info-detail = '2025.11.23刊行, 2025.3.23刊行, 
 2024.12.1刊行, 
 2023.11.10刊行, 
 2022.11.20刊行, 
