樹木の章見出し訂正

--- a/_includes/layout-novel_tree.liquid
+++ b/_includes/layout-novel_tree.liquid
@@ -32,10 +32,10 @@ template: novelPage
       <h2 class="heading">本文目次</h2>
       <ol class="novel__nav-list">
         <li class="index-tree-1"><a href="#sectionMain1">introduction</a></li>
-        <li class="index-tree-2"><a href="#section1">第一章　歌う雨の町</a></li>
+        <li class="index-tree-2"><a href="#section1">第一章　雨の歌う町</a></li>
         <li class="index-tree-3"><a href="#sectionSub1">1　いつか帰る場所</a></li>
         <li class="index-tree-3"><a href="#sectionSub2">2　相槌と挨拶</a></li>
-        <li class="index-tree-2"><a href="#section2">第二章　歌う雨の町</a></li>
+        <li class="index-tree-2"><a href="#section2">第二章　あなたは孤独ではない</a></li>
         <li class="index-tree-3"><a href="#sectionSub3">3　鳥市場</a></li>
         <li class="index-tree-3"><a href="#sectionSub4">4　雲と煙の兄弟</a></li>
         <li class="index-tree-3"><a href="#sectionSub5">5　スコールと木々のダンス</a></li>
