--- a/_includes/info-botanical-vol1.liquid
+++ b/_includes/info-botanical-vol1.liquid
@@ -1,4 +1,4 @@
-<p>【エッセイ＆ガイドブック / 文庫版 / 中綴じ手製本 / 24P（フルカラー）】</p>
+<p>【エッセイ＆ガイドブック / 文庫版 / 中綴じ本 / 24P（フルカラー）】</p>
 <p class="book-info__copy">植物園では、皆、思い思いに好きなことをしている。</p>
 <p>本書は、この数年で訪ねた東京都内にある植物園のいくつかを、小さなエッセイと写真とともに一冊にまとめたものです。<br>
 『すべての樹木は光』続編冒頭で、未来の植物園を舞台にしようと決めてから、元から好きだった植物園にさらに足繁く通うようになりました。ガイドブックと呼ぶにはささやかなこの本が、植物園へ散歩に行くひとをもうひとり増やす切っ掛けになったら嬉しく思います。</p>
