『紙飛行機』公開終了

--- a/_includes/layout-novel_moon.liquid
+++ b/_includes/layout-novel_moon.liquid
@@ -24,7 +24,7 @@ template: novelPage
     </section>
   </nav>
   <div class="novel__body tree_is_light__body">
-  {{ content }}
+  <p>無料公開期間は終了しました。<br>　お読みくださった皆さま、ありがとうございました！</p>
   </div>
   <div class="novel__footer">
     <hr>
